# eslint-repro

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.mjs  pyproject.toml  run_eslint.sh
src/: main.js
